# hri_face_body_matcher-release

./: CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
include/hri_face_body_matcher/: node_face_body_matcher.hpp
launch/: hri_face_body_matcher.launch.py
module/: hri_face_body_matcher_module.yaml
src/: main.cpp
src/hri_face_body_matcher/: node_face_body_matcher.cpp
test/: test_node_face_body_matcher.cpp
